import { fireEvent, render, waitFor } from "@testing-library/preact";
import { afterEach, beforeEach, describe, expect, it, vi } from "vitest";
import type { Train } from "../../types";
import { getRelevantTrackInfo } from "../../utils/api";
import { showToast } from "../../utils/toast";
import TrainCard from "../TrainCard";

// Mock translations
vi.mock("../../utils/translations", () => ({
	t: (key: string) => {
		const translations: Record<string, string> = {
			late: "Myöhässä",
			minutes: "minuuttia",
			minutesShort: "min",
			departure: "Lähtöaika",
			loading: "Ladataan...",
			duration: "Kesto",
			hours: "tuntia",
			minutes_short: "m",
			hours_short: "h",
			track: "Raide",
			departingSoon: "Lähtee pian",
			favorite: "favorite",
			unfavorite: "unfavorite",
			cancelled: "Peruttu",
		};
		return translations[key] || key;
	},
}));

// Mock useLanguageChange hook
vi.mock("../../hooks/useLanguageChange", () => ({
	useLanguageChange: vi.fn(),
}));

// Mock api functions
vi.mock("../../utils/api", () => ({
	getRelevantTrackInfo: vi.fn(() => ({
		track: "1",
		timestamp: "2024-03-20T10:00:00.000Z",
		journeyKey: "123-HKI-TPE",
	})),
}));

// Mock toast utility
vi.mock("../../utils/toast", () => ({
	showToast: vi.fn(),
	TOAST_EVENT: "show-toast",
}));

// Mock storage module to read favorites from localStorage mock
vi.mock("../../utils/storage", () => ({
	initStorage: vi.fn(() => Promise.resolve()),
	getFavoritesSync: vi.fn(() => {
		try {
			return JSON.parse(localStorage.getItem("highlightedTrains") || "{}");
		} catch {
			return {};
		}
	}),
	setFavorite: vi.fn(() => Promise.resolve()),
	removeFavorite: vi.fn(() => Promise.resolve()),
	updateFavorite: vi.fn(() => Promise.resolve()),
}));

// Mock localStorage
const localStorageMock = (() => {
	let store: Record<string, string> = {};
	return {
		getItem: vi.fn((key: string) => store[key] || null),
		setItem: vi.fn((key: string, value: string) => {
			store[key] = value;
		}),
		removeItem: vi.fn((key: string) => {
			delete store[key];
		}),
		clear: () => {
			store = {};
		},
	};
})();

Object.defineProperty(window, "localStorage", { value: localStorageMock });

describe("TrainCard", () => {
	const mockTrain: Train = {
		trainNumber: "123",
		cancelled: false,
		operatorUICCode: "1234",
		trainCategory: "Commuter",
		trainType: "Commuter",
		commuterLineID: "A",
		timeTableRows: [
			{
				stationShortCode: "HKI",
				type: "DEPARTURE",
				scheduledTime: "2024-03-20T10:00:00.000Z",
				liveEstimateTime: "2024-03-20T10:00:00.000Z",
				differenceInMinutes: 0,
				trainStopping: true,
				commercialStop: true,
				commercialTrack: "1",
				cancelled: false,
				station: {
					name: "Helsinki",
					shortCode: "HKI",
					location: {
						latitude: 60.1699,
						longitude: 24.9384,
					},
				},
			},
			{
				stationShortCode: "TPE",
				type: "ARRIVAL",
				scheduledTime: "2024-03-20T11:00:00.000Z",
				liveEstimateTime: "2024-03-20T11:00:00.000Z",
				differenceInMinutes: 0,
				trainStopping: true,
				commercialStop: true,
				commercialTrack: "2",
				cancelled: false,
				station: {
					name: "Tampere",
					shortCode: "TPE",
					location: {
						latitude: 61.4978,
						longitude: 23.7609,
					},
				},
			},
		],
	};

	const defaultProps = {
		train: mockTrain,
		stationCode: "HKI",
		destinationCode: "TPE",
		currentTime: new Date("2024-03-20T09:55:00.000Z"),
		onDepart: vi.fn(),
	};

	beforeEach(() => {
		localStorageMock.clear();
		vi.clearAllMocks();
		vi.useFakeTimers();
		// Mock requestAnimationFrame to execute immediately
		vi.stubGlobal(
			"requestAnimationFrame",
			vi.fn((cb) => {
				cb(0);
				return 0;
			}),
		);
		// Mock Date.now() for stable animation-delay in snapshots
		vi.spyOn(Date, "now").mockReturnValue(
			new Date("2024-03-20T09:55:00.000Z").getTime(),
		);
	});

	afterEach(() => {
		vi.useRealTimers();
		vi.restoreAllMocks();
	});

	it("renders train information correctly", () => {
		const { getByText, getByLabelText } = render(
			<TrainCard {...defaultProps} />,
		);

		expect(getByLabelText("favorite")).toBeInTheDocument();
		expect(getByText("5 min")).toBeInTheDocument();
	});

	it("fades out departed train", async () => {
		const futureTime = new Date("2024-03-20T10:01:00.000Z");
		const departedTrain = {
			...mockTrain,
			isDeparted: true,
			timeTableRows: [
				{
					...mockTrain.timeTableRows[0],
					actualTime: "2024-03-20T10:00:00.000Z",
				},
				mockTrain.timeTableRows[1],
			],
		};
		const { container } = render(
			<TrainCard
				{...defaultProps}
				train={departedTrain}
				currentTime={futureTime}
			/>,
		);

		const card = container.firstChild as HTMLElement;

		// First, card should show grayed-out state (grayscale + opacity-50 classes)
		expect(card).toHaveClass("grayscale");
		expect(card).toHaveClass("opacity-50");
		// Inline opacity should not be set yet (using class opacity)
		expect(card.style.opacity).toBe("");

		// Advance timers past the 2 second delay
		await vi.advanceTimersByTimeAsync(2100);

		// Now opacity should transition to 0
		await waitFor(() => {
			expect(card.style.opacity).toBe("0");
		});
	});

	it("handles cancelled trains correctly", () => {
		const cancelledTrain = { ...mockTrain, cancelled: true };
		const { container } = render(
			<TrainCard {...defaultProps} train={cancelledTrain} />,
		);

		// The card content is now inside a wrapper div with swipe functionality
		const cardElement = container.querySelector(
			"[data-train-number]",
		) as HTMLElement;
		expect(cardElement).toHaveClass("from-red-50");
	});

	it("handles favorite button click to highlight train", () => {
		const { container, getByLabelText, rerender } = render(
			<TrainCard {...defaultProps} />,
		);
		const favoriteButton = getByLabelText("favorite");

		// Click the favorite button
		fireEvent.click(favoriteButton);

		// Re-render to apply the highlight state change
		rerender(<TrainCard {...defaultProps} />);

		// The card content is now inside a wrapper div with swipe functionality
		const cardElement = container.querySelector(
			"[data-train-number]",
		) as HTMLElement;
		// Check that it has highlighting styles (either for departing soon or general highlight)
		expect(cardElement).toHaveClass("animate-soft-blink-highlight");
	});

	it("removes highlight after departure", () => {
		const highlightedTrain = {
			...mockTrain,
			trainNumber: "123",
		};

		// Set initial highlight in localStorage
		localStorageMock.setItem(
			"highlightedTrains",
			JSON.stringify({
				"123": {
					highlighted: true,
					removeAfter: new Date("2024-03-20T10:10:00.000Z").toISOString(),
					journeyKey: "123-HKI-TPE",
				},
			}),
		);

		const { container, rerender } = render(
			<TrainCard {...defaultProps} train={highlightedTrain} />,
		);

		// The card content is now inside a wrapper div with swipe functionality
		const cardElement = container.querySelector(
			"[data-train-number]",
		) as HTMLElement;

		// Initial state should be highlighted
		expect(cardElement).toHaveClass("animate-soft-blink-highlight");

		// Move time forward past the removal time
		rerender(
			<TrainCard
				{...defaultProps}
				train={highlightedTrain}
				currentTime={new Date("2024-03-20T10:11:00.000Z")}
			/>,
		);

		// Highlight should be removed (need to requery after rerender)
		const cardElementAfter = container.querySelector(
			"[data-train-number]",
		) as HTMLElement;
		expect(cardElementAfter).not.toHaveClass("animate-soft-blink-highlight");
	});

	it("shows correct duration between stations", () => {
		const { getByLabelText } = render(<TrainCard {...defaultProps} />);

		// Duration should be 1 hour
		expect(getByLabelText("Kesto 1 tuntia 0 minuuttia")).toBeInTheDocument();
	});

	it("handles delayed trains correctly", () => {
		const delayedTrain = {
			...mockTrain,
			timeTableRows: [
				{
					...mockTrain.timeTableRows[0],
					differenceInMinutes: 15,
					liveEstimateTime: "2024-03-20T10:15:00.000Z",
				},
				mockTrain.timeTableRows[1],
			],
		};

		const { getByText } = render(
			<TrainCard {...defaultProps} train={delayedTrain} />,
		);

		expect(getByText("+15 min")).toBeInTheDocument();
	});

	it("restores card when estimate jumps forward after being negative", async () => {
		const pastTime = new Date("2024-03-20T10:01:00.000Z");
		const departedTrain = {
			...mockTrain,
			isDeparted: true,
			timeTableRows: [
				{
					...mockTrain.timeTableRows[0],
					actualTime: "2024-03-20T10:00:00.000Z",
				},
				mockTrain.timeTableRows[1],
			],
		};
		const { rerender, container } = render(
			<TrainCard
				{...defaultProps}
				train={departedTrain}
				currentTime={pastTime}
			/>,
		);

		const card = container.firstChild as HTMLElement;

		// First check grayed-out state
		expect(card).toHaveClass("grayscale");
		expect(card).toHaveClass("opacity-50");

		// Advance timers past the delay to trigger fade
		await vi.advanceTimersByTimeAsync(2100);
		expect(card.style.opacity).toBe("0");

		// Estimate jumps forward: train is no longer departed
		const notDepartedTrain = {
			...mockTrain,
			isDeparted: false,
		};
		rerender(
			<TrainCard
				{...defaultProps}
				train={notDepartedTrain}
				currentTime={new Date("2024-03-20T09:59:00.000Z")}
			/>,
		);

		// Card should be visible again and not grayed out
		const cardAfter = container.firstChild as HTMLElement;
		expect(cardAfter).not.toHaveClass("grayscale");
		expect(cardAfter).not.toHaveClass("opacity-50");
		expect(cardAfter.style.opacity).toBe("");
	});

	describe("track change toast", () => {
		const mockedShowToast = vi.mocked(showToast);
		const mockedGetRelevantTrackInfo = vi.mocked(getRelevantTrackInfo);

		it("fires toast when highlighted train's track changes", () => {
			// Set up highlighted state in localStorage
			localStorageMock.setItem(
				"highlightedTrains",
				JSON.stringify({
					"123": {
						highlighted: true,
						removeAfter: new Date("2024-03-20T10:10:00.000Z").toISOString(),
						journeyKey: "123-HKI-TPE",
						track: "1",
					},
				}),
			);

			// Initial render with track "1"
			mockedGetRelevantTrackInfo.mockReturnValue({
				track: "1",
				timestamp: "2024-03-20T10:00:00.000Z",
				journeyKey: "123-HKI-TPE",
			});

			// Seed trackMemory so there's a baseline to detect changes
			localStorageMock.setItem(
				"trackMemory",
				JSON.stringify({
					"123-HKI-TPE": { track: "1", timestamp: Date.now() },
				}),
			);

			const { rerender } = render(<TrainCard {...defaultProps} />);

			// Now the track changes to "3"
			mockedGetRelevantTrackInfo.mockReturnValue({
				track: "3",
				timestamp: "2024-03-20T10:00:00.000Z",
				journeyKey: "123-HKI-TPE",
			});

			const trainWithNewTrack = {
				...defaultProps.train,
				timeTableRows: [
					{
						...defaultProps.train.timeTableRows[0],
						commercialTrack: "3",
					},
					defaultProps.train.timeTableRows[1],
				],
			};

			rerender(
				<TrainCard
					{...defaultProps}
					train={trainWithNewTrack}
					currentTime={new Date("2024-03-20T09:56:00.000Z")}
				/>,
			);

			expect(mockedShowToast).toHaveBeenCalledWith(
				expect.stringContaining("A"),
				"warning",
				6000,
			);
		});

		it("does NOT fire toast when train is not highlighted", () => {
			mockedGetRelevantTrackInfo.mockReturnValue({
				track: "1",
				timestamp: "2024-03-20T10:00:00.000Z",
				journeyKey: "123-HKI-TPE",
			});

			localStorageMock.setItem(
				"trackMemory",
				JSON.stringify({
					"123-HKI-TPE": { track: "1", timestamp: Date.now() },
				}),
			);

			const { rerender } = render(<TrainCard {...defaultProps} />);

			mockedGetRelevantTrackInfo.mockReturnValue({
				track: "3",
				timestamp: "2024-03-20T10:00:00.000Z",
				journeyKey: "123-HKI-TPE",
			});

			const trainWithNewTrack = {
				...defaultProps.train,
				timeTableRows: [
					{
						...defaultProps.train.timeTableRows[0],
						commercialTrack: "3",
					},
					defaultProps.train.timeTableRows[1],
				],
			};

			rerender(
				<TrainCard
					{...defaultProps}
					train={trainWithNewTrack}
					currentTime={new Date("2024-03-20T09:56:00.000Z")}
				/>,
			);

			expect(mockedShowToast).not.toHaveBeenCalled();
		});
	});

	describe("snapshots", () => {
		it("matches snapshot for normal train", () => {
			const { container } = render(<TrainCard {...defaultProps} />);
			expect(container.firstChild).toMatchSnapshot();
		});

		it("matches snapshot for cancelled train", () => {
			const cancelledTrain = { ...mockTrain, cancelled: true };
			const { container } = render(
				<TrainCard {...defaultProps} train={cancelledTrain} />,
			);
			expect(container.firstChild).toMatchSnapshot();
		});

		it("matches snapshot for highlighted train", () => {
			// Set up highlighted state in localStorage
			localStorageMock.setItem(
				"highlightedTrains",
				JSON.stringify({
					"123": {
						highlighted: true,
						removeAfter: new Date("2024-03-20T10:10:00.000Z").toISOString(),
						journeyKey: "123-HKI-TPE",
					},
				}),
			);

			const { container } = render(<TrainCard {...defaultProps} />);
			expect(container.firstChild).toMatchSnapshot();
		});
	});
});
