// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrainCard > snapshots > matches snapshot for cancelled train 1`] = `
<div
  class="rounded-xl transition-all duration-700 ease-in-out  "
>
  <div
    class="relative overflow-hidden rounded-xl shadow-[0_2px_8px_rgba(0,0,0,0.08),0_1px_2px_rgba(0,0,0,0.06)] border border-gray-200 dark:border-gray-600 dark:shadow-[0_4px_16px_rgba(0,0,0,0.4)]"
  >
    <div
      aria-hidden="true"
      class="absolute inset-y-0 left-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-y-0 right-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      class="card rounded-xl relative bg-gradient-to-br from-white to-gray-50 dark:bg-none dark:bg-gray-800 bg-gradient-to-br from-red-50 to-red-100 dark:from-red-950 dark:to-red-900 border-red-300 dark:border-red-800 w-full max-w-full text-left relative select-none "
      data-train-cancelled="true"
      data-train-line="A"
      data-train-number="123"
      data-train-unknown-delay="false"
    >
      <div
        class="card-body p-3 sm:p-4"
      >
        <div
          class="flex items-start justify-between gap-2 sm:gap-4 min-h-[76px] sm:min-h-20"
        >
          <div
            class="flex items-center gap-3 sm:gap-4 flex-1 min-w-0 overflow-hidden"
          >
            <button
              aria-label="favorite"
              class="flex-shrink-0 h-14 w-14 sm:h-16 sm:w-16 flex items-center justify-center text-xl font-bold rounded-2xl shadow-brand-medium transition-transform duration-300 relative group touch-manipulation select-none focus:outline-none border-none ring-0 bg-gradient-to-br from-red-500 to-red-600 text-white"
              type="button"
            >
              A
            </button>
            <div
              class="space-y-2 sm:space-y-1 min-w-0 flex-1 overflow-hidden"
            >
              <div
                class="card-title p-0 flex-col items-start gap-1"
              >
                <div
                  class="flex flex-col gap-2 sm:gap-1 w-full"
                >
                  <span
                    class="text-xl sm:text-2xl font-medium text-gray-800 dark:text-gray-100 min-w-0 flex flex-col sm:flex-row items-start sm:items-center gap-1 sm:gap-2 sm:flex-wrap"
                  >
                    <span
                      class="text-base-content/70 text-sm sm:text-xl whitespace-nowrap"
                    >
                      <time
                        datetime="2024-03-20T10:00:00.000Z"
                      >
                        12.00
                      </time>
                      <svg
                        aria-hidden="true"
                        class="inline-block w-3 h-3 sm:w-4 sm:h-4 mx-1 sm:mx-2"
                        fill="currentColor"
                        viewBox="0 0 448 512"
                      >
                        <path
                          d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h306.7L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                        />
                      </svg>
                      <time
                        datetime="2024-03-20T11:00:00.000Z"
                      >
                        13.00
                      </time>
                    </span>
                    <output
                      aria-hidden="true"
                      aria-live="polite"
                      class="badge badge-warning badge-sm font-semibold invisible"
                    >
                      +0 min
                    </output>
                  </span>
                  <output
                    aria-hidden="true"
                    class="text-sm sm:text-base font-medium flex items-center truncate text-base-content/60 opacity-0 pointer-events-none select-none"
                  >
                    <svg
                      aria-hidden="true"
                      class="inline-block w-3.5 h-3.5 sm:w-4 sm:h-4 mr-1"
                      fill="currentColor"
                      viewBox="0 0 512 512"
                    >
                      <path
                        d="M256 0a256 256 0 1 1 0 512A256 256 0 0 1 256 0zm-24 120v136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                      />
                    </svg>
                    <span>
                      1
                      h 
                      0
                      m
                    </span>
                  </output>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-end gap-2 sm:gap-3 flex-shrink-0 min-h-[76px] sm:min-h-20 justify-start"
          >
            <span
              class="badge badge-error badge-lg text-white"
            >
              Peruttu
            </span>
            <div
              aria-hidden="true"
              class="badge badge-success badge-lg gap-2 font-semibold sm:h-8 sm:px-4 invisible"
            >
              <span>
                0 min
              </span>
            </div>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Peruttu
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TrainCard > snapshots > matches snapshot for highlighted train 1`] = `
<div
  class="rounded-xl transition-all duration-700 ease-in-out  "
>
  <div
    class="relative overflow-hidden rounded-xl shadow-[0_2px_8px_rgba(0,0,0,0.08),0_1px_2px_rgba(0,0,0,0.06)] border border-gray-200 dark:border-gray-600 dark:shadow-[0_4px_16px_rgba(0,0,0,0.4)]"
  >
    <div
      aria-hidden="true"
      class="absolute inset-y-0 left-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-y-0 right-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      class="card rounded-xl relative bg-gradient-to-br from-white to-gray-50 dark:bg-none dark:bg-gray-800 animate-soft-blink dark:animate-soft-blink-dark w-full max-w-full text-left relative select-none "
      data-train-cancelled="false"
      data-train-line="A"
      data-train-number="123"
      data-train-unknown-delay="false"
    >
      <div
        class="card-body p-3 sm:p-4"
      >
        <div
          class="flex items-start justify-between gap-2 sm:gap-4 min-h-[76px] sm:min-h-20"
        >
          <div
            class="flex items-center gap-3 sm:gap-4 flex-1 min-w-0 overflow-hidden"
          >
            <button
              aria-label="favorite"
              class="flex-shrink-0 h-14 w-14 sm:h-16 sm:w-16 flex items-center justify-center text-xl font-bold rounded-2xl shadow-brand-medium transition-transform duration-300 relative group touch-manipulation select-none focus:outline-none border-none ring-0 bg-[#8c4799] text-white"
              type="button"
            >
              A
            </button>
            <div
              class="space-y-2 sm:space-y-1 min-w-0 flex-1 overflow-hidden"
            >
              <div
                class="card-title p-0 flex-col items-start gap-1"
              >
                <div
                  class="flex flex-col gap-2 sm:gap-1 w-full"
                >
                  <span
                    class="text-xl sm:text-2xl font-medium text-gray-800 dark:text-gray-100 min-w-0 flex flex-col sm:flex-row items-start sm:items-center gap-1 sm:gap-2 sm:flex-wrap"
                  >
                    <span
                      class="text-base-content/70 text-sm sm:text-xl whitespace-nowrap"
                    >
                      <time
                        datetime="2024-03-20T10:00:00.000Z"
                      >
                        12.00
                      </time>
                      <svg
                        aria-hidden="true"
                        class="inline-block w-3 h-3 sm:w-4 sm:h-4 mx-1 sm:mx-2"
                        fill="currentColor"
                        viewBox="0 0 448 512"
                      >
                        <path
                          d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h306.7L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                        />
                      </svg>
                      <time
                        datetime="2024-03-20T11:00:00.000Z"
                      >
                        13.00
                      </time>
                    </span>
                    <output
                      aria-hidden="true"
                      aria-live="polite"
                      class="badge badge-warning badge-sm font-semibold invisible"
                    >
                      +0 min
                    </output>
                  </span>
                  <output
                    aria-label="Kesto 1 tuntia 0 minuuttia"
                    class="text-sm sm:text-base font-medium flex items-center truncate text-base-content/60 "
                  >
                    <svg
                      aria-hidden="true"
                      class="inline-block w-3.5 h-3.5 sm:w-4 sm:h-4 mr-1"
                      fill="currentColor"
                      viewBox="0 0 512 512"
                    >
                      <path
                        d="M256 0a256 256 0 1 1 0 512A256 256 0 0 1 256 0zm-24 120v136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                      />
                    </svg>
                    <span>
                      1
                      h 
                      0
                      m
                    </span>
                  </output>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-end gap-2 sm:gap-3 flex-shrink-0 min-h-[76px] sm:min-h-20 justify-start"
          >
            <div
              class="indicator"
            >
              <button
                aria-label="Raide 1. clickToSeeArrivalTrack"
                aria-pressed="false"
                class="group cursor-pointer focus-ring bg-transparent border-0 p-0"
                type="button"
              >
                <div
                  class="relative inline-block"
                  style="perspective: 1000px; min-height: 32px;"
                >
                  <div
                    style="transform-style: preserve-3d; transform: rotateY(0deg); transition: transform 0.4s ease-out; position: relative; min-height: 32px;"
                  >
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden; -webkit-backface-visibility: hidden;"
                    >
                      Raide
                       
                      1
                      <svg
                        aria-hidden="true"
                        class="inline-block w-3 h-3 ml-1.5 opacity-60"
                        fill="currentColor"
                        viewBox="0 0 512 512"
                      >
                        <path
                          d="M125.7 160H176c17.7 0 32 14.3 32 32s-14.3 32-32 32H48c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32s32 14.3 32 32v51.2L97.6 97.6c87.5-87.5 229.3-87.5 316.8 0s87.5 229.3 0 316.8-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3-163.8-62.5-226.3 0L125.7 160z"
                        />
                      </svg>
                    </div>
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden; -webkit-backface-visibility: hidden; transform: rotateY(180deg); position: absolute; top: 0px; left: 0px; right: 0px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="inline-block w-3 h-3 mr-1"
                        fill="currentColor"
                        viewBox="0 0 448 512"
                      >
                        <path
                          d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h306.7L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                        />
                      </svg>
                      Raide
                       
                      2
                    </div>
                  </div>
                </div>
              </button>
            </div>
            <div
              aria-hidden="false"
              class="badge badge-success badge-lg gap-2 font-semibold sm:h-8 sm:px-4 "
            >
              <span>
                5 min
              </span>
            </div>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Lähtee pian
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TrainCard > snapshots > matches snapshot for normal train 1`] = `
<div
  class="rounded-xl transition-all duration-700 ease-in-out  "
>
  <div
    class="relative overflow-hidden rounded-xl shadow-[0_2px_8px_rgba(0,0,0,0.08),0_1px_2px_rgba(0,0,0,0.06)] border border-gray-200 dark:border-gray-600 dark:shadow-[0_4px_16px_rgba(0,0,0,0.4)]"
  >
    <div
      aria-hidden="true"
      class="absolute inset-y-0 left-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-y-0 right-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      class="card rounded-xl relative bg-gradient-to-br from-white to-gray-50 dark:bg-none dark:bg-gray-800 animate-soft-blink dark:animate-soft-blink-dark w-full max-w-full text-left relative select-none "
      data-train-cancelled="false"
      data-train-line="A"
      data-train-number="123"
      data-train-unknown-delay="false"
    >
      <div
        class="card-body p-3 sm:p-4"
      >
        <div
          class="flex items-start justify-between gap-2 sm:gap-4 min-h-[76px] sm:min-h-20"
        >
          <div
            class="flex items-center gap-3 sm:gap-4 flex-1 min-w-0 overflow-hidden"
          >
            <button
              aria-label="favorite"
              class="flex-shrink-0 h-14 w-14 sm:h-16 sm:w-16 flex items-center justify-center text-xl font-bold rounded-2xl shadow-brand-medium transition-transform duration-300 relative group touch-manipulation select-none focus:outline-none border-none ring-0 bg-[#8c4799] text-white"
              type="button"
            >
              A
            </button>
            <div
              class="space-y-2 sm:space-y-1 min-w-0 flex-1 overflow-hidden"
            >
              <div
                class="card-title p-0 flex-col items-start gap-1"
              >
                <div
                  class="flex flex-col gap-2 sm:gap-1 w-full"
                >
                  <span
                    class="text-xl sm:text-2xl font-medium text-gray-800 dark:text-gray-100 min-w-0 flex flex-col sm:flex-row items-start sm:items-center gap-1 sm:gap-2 sm:flex-wrap"
                  >
                    <span
                      class="text-base-content/70 text-sm sm:text-xl whitespace-nowrap"
                    >
                      <time
                        datetime="2024-03-20T10:00:00.000Z"
                      >
                        12.00
                      </time>
                      <svg
                        aria-hidden="true"
                        class="inline-block w-3 h-3 sm:w-4 sm:h-4 mx-1 sm:mx-2"
                        fill="currentColor"
                        viewBox="0 0 448 512"
                      >
                        <path
                          d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h306.7L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                        />
                      </svg>
                      <time
                        datetime="2024-03-20T11:00:00.000Z"
                      >
                        13.00
                      </time>
                    </span>
                    <output
                      aria-hidden="true"
                      aria-live="polite"
                      class="badge badge-warning badge-sm font-semibold invisible"
                    >
                      +0 min
                    </output>
                  </span>
                  <output
                    aria-label="Kesto 1 tuntia 0 minuuttia"
                    class="text-sm sm:text-base font-medium flex items-center truncate text-base-content/60 "
                  >
                    <svg
                      aria-hidden="true"
                      class="inline-block w-3.5 h-3.5 sm:w-4 sm:h-4 mr-1"
                      fill="currentColor"
                      viewBox="0 0 512 512"
                    >
                      <path
                        d="M256 0a256 256 0 1 1 0 512A256 256 0 0 1 256 0zm-24 120v136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                      />
                    </svg>
                    <span>
                      1
                      h 
                      0
                      m
                    </span>
                  </output>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-end gap-2 sm:gap-3 flex-shrink-0 min-h-[76px] sm:min-h-20 justify-start"
          >
            <div
              class="indicator"
            >
              <button
                aria-label="Raide 1. clickToSeeArrivalTrack"
                aria-pressed="false"
                class="group cursor-pointer focus-ring bg-transparent border-0 p-0"
                type="button"
              >
                <div
                  class="relative inline-block"
                  style="perspective: 1000px; min-height: 32px;"
                >
                  <div
                    style="transform-style: preserve-3d; transform: rotateY(0deg); transition: transform 0.4s ease-out; position: relative; min-height: 32px;"
                  >
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden; -webkit-backface-visibility: hidden;"
                    >
                      Raide
                       
                      1
                      <svg
                        aria-hidden="true"
                        class="inline-block w-3 h-3 ml-1.5 opacity-60"
                        fill="currentColor"
                        viewBox="0 0 512 512"
                      >
                        <path
                          d="M125.7 160H176c17.7 0 32 14.3 32 32s-14.3 32-32 32H48c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32s32 14.3 32 32v51.2L97.6 97.6c87.5-87.5 229.3-87.5 316.8 0s87.5 229.3 0 316.8-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3-163.8-62.5-226.3 0L125.7 160z"
                        />
                      </svg>
                    </div>
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden; -webkit-backface-visibility: hidden; transform: rotateY(180deg); position: absolute; top: 0px; left: 0px; right: 0px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="inline-block w-3 h-3 mr-1"
                        fill="currentColor"
                        viewBox="0 0 448 512"
                      >
                        <path
                          d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h306.7L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                        />
                      </svg>
                      Raide
                       
                      2
                    </div>
                  </div>
                </div>
              </button>
            </div>
            <div
              aria-hidden="false"
              class="badge badge-success badge-lg gap-2 font-semibold sm:h-8 sm:px-4 "
            >
              <span>
                5 min
              </span>
            </div>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Lähtee pian
        </div>
      </div>
    </div>
  </div>
</div>
`;
